# GENAI

./: .env.local.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/docs/: graph-extraction-rollout.md  simulation-rollout.md  source-discovery-scoring.md  supabase-boundary.md
backend/migrations/: 0001_init_jobs_schema.sql  0002_job_heartbeats.sql  0003_source_discovery_evidence_packs.sql  0004_source_library_topics.sql  0005_semantic_source_fragments.sql  README.md
backend/src/backend/: __init__.py  db.py
backend/src/backend/domain/: __init__.py  job_state.py  models.py  simulation_records.py
backend/src/backend/entrypoints/: __init__.py
backend/src/backend/repository/: __init__.py  extraction_repository.py  job_repository.py  simulation_repository.py  source_discovery_repository.py  source_library_repository.py
backend/tests/: test_agent_generation_service.py  test_api_auth_middleware.py  test_config.py  test_extraction_compatibility.py  test_extraction_endpoints.py  test_frontend_boundary.py  test_frontend_source_registry_boundary.py  test_health_endpoints.py  test_job_repository.py  test_job_state.py  test_redis_infrastructure.py  test_semantic_source_recall.py  test_simulation_endpoints.py  test_simulation_strategy_sequences.py  test_source_discovery_assistant_service.py  test_source_discovery_endpoints.py  test_source_discovery_service.py  test_worker_maintenance.py
backend/tests/integration/: test_backend_integration.py
(+170 files in other folders)
