[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "python-backend-foundation"
version = "0.1.0"
description = "Python backend foundation for API + worker job orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.8.0",
  "SQLAlchemy>=2.0.40",
  "asyncpg>=0.30.0",
  "greenlet>=3.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.11.6",
  "httpx>=0.28.1"
]

[project.scripts]
backend-api = "backend.scripts.run_api:main"
backend-worker = "backend.scripts.run_worker:main"
backend-migrate = "backend.scripts.migrate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-q"
testpaths = ["tests"]
